--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
 
         </activity>
         <activity
-            android:name=".InitialSetupActivity"/>
+            android:name=".InitialSetupActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
