--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
-
         </activity>
         <activity
             android:name=".SetupActivity"
@@ -24,10 +23,10 @@
             android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
-
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
+        <activity android:name=".AddPostActivity"/>
         <activity android:name=".SignUpActivity"/>
     </application>
 
