feat memo & update layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".AddPostActivity" />
         <activity android:name=".SignUpActivity" />
+        <activity android:name=".AddMemoActivity" />
+
     </application>
 
 </manifest>
