--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".AddPostActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".AddMemoActivity" />
+        <activity android:name=".MemoActivity" />
 
     </application>
 
