수정 구현중(버튼누르면 불러오기)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".SignUpActivity" />
         <activity android:name=".nav.memo.AddMemoActivity" />
         <activity android:name=".nav.memo.MemoActivity" />
+        <activity android:name=".nav.memo.MemoModify" />
 
     </application>
 
