메모, 커뮤티니 수정 구현중(수정 후 새로고침 미완)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".nav.memo.AddMemoActivity" />
         <activity android:name=".nav.memo.MemoActivity" />
         <activity android:name=".nav.memo.MemoModify" />
+        <activity android:name=".nav.community.PostModify" />
 
     </application>
 
