--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".nav.community.PostActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".BoardActivity"
             android:exported="true"
             android:label="@string/app_name"></activity>
         <activity
