--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,34 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WiUH">
-        <activity
-            android:name=".SetupListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".nav.community.PostActivity"
-            android:exported="false" />
-        <activity
-            android:name=".BoardActivity"
-            android:exported="true"
-            android:label="@string/app_name"></activity>
-        <activity
-            android:name=".SetupActivity"
-            android:exported="false" />
+        <activity android:name=".SetupListActivity" />
+
+
+        <activity android:name=".SetupActivity" />
+        <activity android:name=".nav.community.AddPostActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".nav.memo.AddMemoActivity" />
+        <activity android:name=".nav.memo.MemoModify" />
+        <activity android:name=".nav.community.PostModify" />
+
+        <activity android:name=".nav.memo.MemoActivity"/>
+        <activity android:name=".nav.community.PostActivity"/>
+        <activity android:name=".BoardActivity" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".nav.community.AddPostActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".nav.memo.AddMemoActivity" />
-        <activity android:name=".nav.memo.MemoActivity" />
-        <activity android:name=".nav.memo.MemoModify" />
-        <activity android:name=".nav.community.PostModify" />
-    </application>
 
+    </application>
 </manifest>
