--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,11 @@ dependencies {
     implementation 'com.github.pwittchen:reactivewifi-rx2:0.3.0'
 
     implementation 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
