personal 복구 UI수정 menu 오류상태

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
 
         <activity android:name=".AddWifi" />
         <activity android:name=".activity.NotificationHistoryActivity" />
+        <activity android:name=".activity.PersonalSetupActivity"/>
         <activity android:name=".activity.SetupActivity" />
         <activity android:name=".activity.BoardActivity" />
 
