알림 아이콘 Splash Screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WiUH">
+        android:theme="@style/Theme.WiUH"
+        >
+
 
         <activity android:name=".activity.setup.PersonalSetupActivity" />
         <activity android:name=".activity.setup.SetupActivity" />
@@ -41,13 +43,20 @@
             android:name=".activity.sign.SignUpActivity"
             android:parentActivityName=".activity.sign.LoginActivity" />
         <activity
-            android:name=".activity.sign.LoginActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.sign.LoginActivity"
+            android:exported="true">
         </activity>
     </application>
 
