--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
 }
 
@@ -26,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     buildFeatures {
         viewBinding true
     }
@@ -46,15 +50,17 @@ dependencies {
     implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
 
     implementation 'com.github.tiper:MaterialSpinner:1.4.2'
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.activity:activity:1.4.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'androidx.core:core:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core:1.8.0'
     implementation 'androidx.fragment:fragment:1.4.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
