--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WiUH"
-        >
+        android:theme="@style/Theme.WiUH">
 
 
         <activity android:name=".activity.setup.PersonalSetupActivity" />
@@ -44,10 +43,9 @@
             android:parentActivityName=".activity.sign.LoginActivity" />
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:screenOrientation="portrait"
             android:exported="true"
-            >
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,8 +54,7 @@
         </activity>
         <activity
             android:name=".activity.sign.LoginActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
