--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id "com.autonomousapps.dependency-analysis" version "1.2.0" apply(true)
 }
 
